--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -22,7 +22,7 @@
           <a class="nav-link" aria-current="page" href="../paginas/nosotros.html">NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../paginas/producos.html">PRODUCTOS</a>
+          <a class="nav-link" href="../paginas/productos.html">PRODUCTOS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../paginas/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a>
