se pudo ajustar las img de pagina productos

--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-nav">
             <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
           </div>
       </div>
