--- a/paginas/preguntas frecuentes.html
+++ b/paginas/preguntas frecuentes.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-nav">
           <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
           </div>
       </div>
