--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-nav">
             <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
           </div>
       </div>
@@ -36,18 +36,18 @@
  
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-inner text-center">
           <div class="carousel-item active">
-            <img src="../imagenes/Barbijo.jpg" class="d-block w-100" alt="barbijo">
+            <img src="../imagenes/Barbijo.jpg" class="rounded" alt="barbijo">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/cofias.jpg" class="d-block w-100" alt="cofias">
+            <img src="../imagenes/cofias.jpg" class="rounded" alt="cofias">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/latex.jpg" class="d-block w-100" alt="latex">
+            <img src="../imagenes/latex.jpg" class="rounded" alt="latex">
           </div>
           <div class="carousel-item">
-            <img src="../imagenes/nitrilo.jpg" class="d-block w-100" alt="NITRILO">
+            <img src="../imagenes/nitrilo.jpg" class="rounded" alt="NITRILO">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
