quito promos de los h2

--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -39,21 +39,21 @@
                     <article class="main">    
                       <section class="precios-contenedor">
                             <div class="caja1">
-                                <h2 class="promo-container">PROMO GUANTES LATEX</h2>
+                                <h2 class="promo-container"> GUANTES LATEX</h2>
                                 <li>1 Cajón $5.200</li>
                                 <li>5 Cajones $4.900 C/U</li>
                                 <li>10 Cajones $4.400 C/U</li>
                             </div>
 
                             <div class="caja2">
-                                <h2 class="promo-container">PROMO GUANTES NITRILO CELESTES</h2>
+                                <h2 class="promo-container"> GUANTES NITRILO CELESTES</h2>
                                 <li>1 Cajón $7.600</li>
                                 <li>5 Cajones $7.100 C/U</li>
                                 <li>10 Cajones $6.700 C/U</li>
                             </div>
 
                             <div class="caja3">
-                                <h2 class="promo-container">PROMO GUANTES NITRILO NEGROS</h2>
+                                <h2 class="promo-container"> GUANTES NITRILO NEGROS</h2>
                                 <li>1 Cajón $7.700</li>
                                 <li>5 Cajones $7.100 C/U</li>
                                 <li>10 Cajones $6.900 C/U</li>
