--- a/paginas/index.html
+++ b/paginas/index.html
@@ -11,34 +11,32 @@
     <title>TODO INSUMOS SRL</title>
 </head>
 <body>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-nav">
+        <header>
+        <div class="container">
             <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
           </div>
       </div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../paginas/nosotros.html">NOSOTROS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../paginas/productos.html">PRODUCTOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../paginas/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../paginas/precios.html">PRECIOS </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../paginas/contacto.html">CONTACTO</a>
-          </li>
-      </ul>
+    </header>
+
+    <div class="container nav">
+    <nav class="navbar">
+      <div class="container-fluid nav-link">
+        <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+        <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+        <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+        <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+        <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+      </div>
+    </nav>
+  </div>
+
        <div class="container"> 
         <article class="main">
-          <p class="fs-2 text-uppercase fw-bolder">somos tu empresa de insumos</p>
+          <p class="fs-2 text-uppercase fw-bolder">empresa de insumos</p>
         <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y la composición tipográfica. Loento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturique incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi.</p>   
         </article>
     </div>
+  </div>
 
         <footer class="footer">
         <div class="redes-container">
