--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -11,28 +11,25 @@
     <title>TODO INSUMOS SRL</title>
 </head>
 <body>
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-nav">
+     <header>
+        <div class="container">
+          <a href="./index.html"> 
             <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
+          </a>  
           </div>
+      </header>
+
+      <div class="container nav">
+        <nav class="navbar">
+          <div class="container-fluid nav-link">
+            <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+            <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+            <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+            <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+            <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+          </div>
+        </nav>
       </div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../paginas/nosotros.html">NOSOTROS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../paginas/productos.html">PRODUCTOS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../paginas/preguntas frecuentes.html">PREGUNTAS FRECUENTES</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../paginas/precios.html">PRECIOS </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../paginas/contacto.html">CONTACTO</a>
-          </li>
-      </ul>
  
 
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
