--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -41,15 +41,15 @@
             </div>
 
       
-    <footer class="footer">
-        <div class="redes-container">
-            <ul>
-                <li><a href="#" class="facebook"> <i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://instagram.com/todoinsumoss?igshid=YmMyMTA2M2Y=" class="instagram" target="_blank"> <i class="fab fa-instagram"></i></a></li>
-                <li><a href=https://api.whatsapp.com/send?phone=541134762168&text=%C2%A1Hola%21+Estoy+en+la+tienda+Todo+Insumos+y+quiero+pedir+m%C3%A1s+informaci%C3%B3n. class="whatsapp" target="_blank"> <i class="fab fa-whatsapp"></i></a></li>
-            </ul>
-         </div>     
-    </footer>
+            <footer class="footer">
+              <div class="redes-container">
+                  <ul class="ul">
+                      <li><a href="#" class="facebook"> <i class="fab fa-facebook-f"></i></a></li>
+                      <li><a href="https://instagram.com/todoinsumoss?igshid=YmMyMTA2M2Y=" class="instagram" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+                      <li><a href=https://api.whatsapp.com/send?phone=541134762168&text=%C2%A1Hola%21+Estoy+en+la+tienda+Todo+Insumos+y+quiero+pedir+m%C3%A1s+informaci%C3%B3n. class="whatsapp" target="_blank"> <i class="fab fa-whatsapp"></i></a></li>
+                  </ul>
+               </div>     
+          </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
