realizo anidacion en footer

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -33,7 +33,7 @@
 
       <div class="container">
             <article class="main">
-              <p class="fs-2 text-uppercase fw-bolder">somos tu empresa de insumos</p>
+              <p class="fs-2 text-uppercase fw-bolder">sobre nosotros</p>
                 <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y la composición tipográfica. Loento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturique incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi.</p>   
          </article>
         </div>
@@ -49,7 +49,7 @@
               </ul>
            </div>     
       </footer>
-      
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
