--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -32,9 +32,9 @@
       </div>
  
 
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner text-center">
-          <div class="carousel-item active">
+      <div id="carouselExampleControls" class="carousel slide carousel_primerio" data-bs-ride="carousel">
+        <div class="carousel-inner text-center carousel_secundario">
+          <div class="carousel-item active carousel">
             <img src="../imagenes/Barbijo.jpg" class="rounded" alt="barbijo">
           </div>
           <div class="carousel-item">
