trabajo sobre pagina productos

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -32,7 +32,7 @@
       </div>
  
 
-      <div id="carouselExampleControls" class="carousel slide carousel_primerio" data-bs-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide carousel_primario" data-bs-ride="carousel">
         <div class="carousel-inner text-center carousel_secundario">
           <div class="carousel-item active carousel">
             <img src="../imagenes/Barbijo.jpg" class="rounded" alt="barbijo">
