agrego hojas de scss y ademas realizo modificacion agregando mixin y maps

--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="descripcion" content="pagina de precios">
+    <meta name="keywords" content="HTML, ASP, JS, META, insumos, guantes, cofias, guantes latex, guantes nitrilo, insumos medicos, insumos quirurgicos, barbijos">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0 minimun-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50obBUHEmvPQ+1lW4y7PTFmhCaxp0ML5d60;1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymius">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="icon" href="../Imagenes/ICO.jpeg">
-    <title>TODO INSUMOS SRL</title>
+    <title>precios</title>
 </head>
 
 <body>
