--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="descripcion" content="pagina de preguntas">
+    <meta name="keywords" content="HTML, ASP, JS, META, insumos, guantes, cofias, guantes latex, guantes nitrilo, insumos medicos, insumos quirurgicos, barbijos">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0 minimun-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50obBUHEmvPQ+1lW4y7PTFmhCaxp0ML5d60;1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymius">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="icon" href="../Imagenes/ICO.jpeg">
-    <title>TODO INSUMOS SRL</title>
+    <title>preguntas frecuentes</title>
 </head>
 <body>
   <header>
@@ -35,7 +37,7 @@
         
       <div class="container">
             <article class="main">
-              <p class="fs-2 text-uppercase fw-bolder">somos tu empresa de insumos</p>
+              <p class="fs-2 text-uppercase fw-bolder">preguntas frecuentes</p>
                 <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y la composición tipográfica. Loento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturique incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi.</p>   
                 </article>
             </div>
