--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="descripcion" content="pagina de preguntas">
+    <meta name="descripcion" content="preguntas">
     <meta name="keywords" content="HTML, ASP, JS, META, insumos, guantes, cofias, guantes latex, guantes nitrilo, insumos medicos, insumos quirurgicos, barbijos">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0 minimun-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50obBUHEmvPQ+1lW4y7PTFmhCaxp0ML5d60;1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymius">
