redirecciono paginas con index

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -15,7 +15,7 @@
 <body>
      <header>
         <div class="container">
-          <a href="./index.html"> 
+          <a href="../index.html">
             <img src="../imagenes/logo2.PNG" class="img-fluid mx-auto d-block" alt="logo">
           </a>  
           </div>
