--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -38,7 +38,16 @@
       <div class="container">
             <article class="main">
               <p class="fs-2 text-uppercase fw-bolder">preguntas frecuentes</p>
-                <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y la composición tipográfica. Loento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque que incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturique incluía versiones de Lorem Ipsum.lore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem provident magni magnam similique eaque nostrum aspernatur maxime, eveniet labore quidem ad qui neque architecto. Minima possimus vitae doloremque reiciendis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum esse in expedita, adipisci dolore neque eaque suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi suscipit accusantium commodi maxime doloremque. Maxime non asperiores officiis iusto suscipit mollitia, nisi excepturi.</p>   
+                <p><strong><ins>¿Cómo compro?:</ins></strong> 
+                 <p> Para comprar tenés que comunicarte a nuestro WhatsApp. Uno de nuestros expertos se va a poner en contacto contigo. Luego abonas y te lo enviamos a tu domicilio.</p>
+                 <p><strong><ins>¿Cuáles son los métodos de pago?</ins></strong></p>
+                 <p>Podes abonar por mercado pago, transferencia o efectivo.</p>
+                 <p><strong><ins>¿Cuánto demoran en hacerme el envío?</ins></strong></p>
+                 <p>Una vez realizado el pago lo despachamos en 48hs.</p>
+                 <p><strong><ins>¿Por qué medios envían?</ins></strong></p>
+                 <p>Los envíos los hacemos por Via Cargo, Correo Argentino o mensajería.</p>
+                 <p><strong><ins>¿Cómo se que talle soy?</ins></strong></p>
+                 <p>Háblanos por WhatsApp y te explicamos cómo medirte la mano para saber tu talle.</p>
                 </article>
             </div>
 
