redirijo facbook redes

--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -55,7 +55,7 @@
             <footer class="footer">
               <div class="redes-container">
                   <ul class="ul">
-                      <li><a href="#" class="facebook"> <i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/todoinsumosss/?ref=py_c" class="facebook" target="_blank"> <i class="fab fa-facebook-f"></i></a></li>
                       <li><a href="https://instagram.com/todoinsumoss?igshid=YmMyMTA2M2Y=" class="instagram" target="_blank"> <i class="fab fa-instagram"></i></a></li>
                       <li><a href=https://api.whatsapp.com/send?phone=541134762168&text=%C2%A1Hola%21+Estoy+en+la+tienda+Todo+Insumos+y+quiero+pedir+m%C3%A1s+informaci%C3%B3n. class="whatsapp" target="_blank"> <i class="fab fa-whatsapp"></i></a></li>
                   </ul>
