--- a/index.html
+++ b/index.html
@@ -19,22 +19,42 @@
           </div>
       </div>
     </header>
-
-    <div class="container nav">
-    <nav class="navbar">
-      <div class="container-fluid nav-link">
-        <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
-        <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
-        <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
-        <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
-        <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-cuerpo nav">
+      <div class="container nav-div1">
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
+            <li class="nav-item">
+              <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
+
+  <div class="container">
+    <img src="./imagenes/banner.jpeg" class="img-fluid mx-auto d-block" alt="logo">
   </div>
+
+
+
 
        <div class="container article"> 
         <article class="main">
-          <p class="fs-2 text-uppercase fw-bolder">somos tu empresa de insumos</p>
           <p><em> Somos una empresa familiar que nace con el objetivo de brindar atención personalizada al sector de la salud y belleza.</em> 
           <br><em>Comercializamos insumos descartables: Guantes de látex, nitrilo, cofias plisadas, camisolines, barbijos y más.</em>
           <br><em>Nuestros expertos te asesoran de manera individual para que puedas obtener tus insumos de forma correcta y con la mejor calidad.</em> 
