--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -21,22 +21,41 @@
       </div>
 </header>
 
-<div class="container nav">
-  <nav class="navbar">
-    <div class="container-fluid nav-link">
-      <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
-      <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
-      <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
-      <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
-      <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-cuerpo nav">
+  <div class="container nav-div1">
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
+
+<div class="container">
+  <img src="../imagenes/guantesfondo2.png" class="img-fluid mx-auto d-flex" alt="logo">
 </div>
 
-      <div class="container">
-            <article class="main">
-              <p class="fs-2 text-uppercase fw-bolder">sobre nosotros</p>
-                <p><em>Todo insumo se fundó en 2020. En plena pandemia quisimos ayudar ante la falta de insumos y nos pusimos a vender y entregar de forma súper rápida. Una de nuestras misiones es mantener los precios durante todo el año. Sabemos que la inflación en el país es un problema que nos afecta a todos y por eso queremos aportar nuestro granito absorbiendo todos los aumentos dentro de lo posible para que no fluctúen tanto los precios.</em></p>   
+
+      <div class="container article">
+            <article class="main">              
+                <p><em>Todo Insumos se fundó en 2020. En plena pandemia quisimos ayudar ante la falta de insumos y nos pusimos a vender y entregar de forma súper rápida. Una de nuestras misiones es mantener los precios durante todo el año. Sabemos que la inflación en el país es un problema que nos afecta a todos y por eso queremos aportar nuestro granito absorbiendo todos los aumentos dentro de lo posible para que no fluctúen tanto los precios.</em></p>   
          </article>
         </div>
 
