--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -22,17 +22,31 @@
       </div>
 </header>
 
-<div class="container nav">
-  <nav class="navbar">
-    <div class="container-fluid nav-link">
-      <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
-      <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
-      <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
-      <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
-      <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-cuerpo nav">
+  <div class="container nav-div1">
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-</div>
+  </div>
+</nav>
    
             
           <article class="container-fluid">    
