--- a/paginas/preguntas-frecuentes.html
+++ b/paginas/preguntas-frecuentes.html
@@ -23,32 +23,56 @@
 </header>
 
 
-<div class="container nav">
-  <nav class="navbar">
-    <div class="container-fluid nav-link">
-      <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
-      <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
-      <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
-      <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
-      <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-cuerpo nav">
+  <div class="container nav-div1">
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+        </li>
+        <li class="nav-item">
+          <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-</div>
+  </div>
+</nav>
         
-      <div class="container">
+      <div class="container article" >
             <article class="main">
               <p class="fs-2 text-uppercase fw-bolder">preguntas frecuentes</p>
-                <p><strong><ins>¿Cómo compro?:</ins></strong> 
-                 <p> Para comprar tenés que comunicarte a nuestro WhatsApp. Uno de nuestros expertos se va a poner en contacto contigo. Luego abonas y te lo enviamos a tu domicilio.</p>
-                 <p><strong><ins>¿Cuáles son los métodos de pago?</ins></strong></p>
-                 <p>Podes abonar por mercado pago, transferencia o efectivo.</p>
-                 <p><strong><ins>¿Cuánto demoran en hacerme el envío?</ins></strong></p>
-                 <p>Una vez realizado el pago lo despachamos en 48hs.</p>
-                 <p><strong><ins>¿Por qué medios envían?</ins></strong></p>
-                 <p>Los envíos los hacemos por Via Cargo, Correo Argentino o mensajería.</p>
-                 <p><strong><ins>¿Cómo se que talle soy?</ins></strong></p>
-                 <p>Háblanos por WhatsApp y te explicamos cómo medirte la mano para saber tu talle.</p>
-                </article>
+              <details>
+              <summary>¿Cómo compro?</summary>
+               <div><p><em>Para comprar tenés que comunicarte a nuestro WhatsApp. Uno de nuestros expertos se va a poner en contacto contigo. Luego abonas y te lo enviamos a tu domicilio.</em></p></div>
+              </details>
+              <details>
+               <summary>¿Cuáles son los métodos de pago?</summary>
+               <div><p><em>Podes abonar por mercado pago, transferencia o efectivo.</em></p></div>
+              </details>
+              <details> 
+              <summary>¿Cuánto demoran en hacerme el envío?</summary>
+               <div><p><em>Una vez realizado el pago lo despachamos en 48hs.</em></p></div>
+              </details>
+              <details>
+              <summary>¿Por qué medios envían?</summary>
+              <div><p><em>Los envíos los hacemos por Via Cargo, Correo Argentino o mensajería.</em></p></div>
+            </details>
+            <details>
+              <summary>¿Cómo se que talle soy?</summary>
+              <div><p><em>Háblanos por WhatsApp y te explicamos cómo medirte la mano para saber tu talle.</em></p></div>
+            </details>
+              </article>
             </div>
 
       
