--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -21,43 +21,71 @@
           </div>
       </header>
 
-      <div class="container nav">
-        <nav class="navbar">
-          <div class="container-fluid nav-link">
-            <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
-            <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
-            <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
-            <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
-            <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
-          </div>
-        </nav>
-      </div>
- 
-
-      <div id="carouselExampleControls" class="carousel slide carousel_primario" data-bs-ride="carousel">
-        <div class="carousel-inner text-center carousel_secundario">
-          <div class="carousel-item active carousel">
-            <img src="../imagenes/Barbijo.jpg" class="rounded" alt="barbijo">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/cofias.jpg" class="rounded" alt="cofias">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/latex.jpg" class="rounded" alt="latex">
-          </div>
-          <div class="carousel-item">
-            <img src="../imagenes/nitrilo.jpg" class="rounded" alt="NITRILO">
+      <nav class="navbar navbar-expand-lg navbar-light bg-cuerpo nav">
+        <div class="container nav-div1">
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
+              <li class="nav-item">
+                <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+              </li>
+              <li class="nav-item">
+                <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      </nav>
+ 
+      <section class="container sec-contenedor">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../imagenes/guanteslatex.png" class="d-block w-100" alt="latex">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-dark">Guantes de Latex</h5>
+                
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../imagenes/guantesnegros.png" class="d-block w-100" alt="nitrilo">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-dark">Guantes de Nitrilo</h5>
+                 </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../imagenes/barbijo.jpg" class="d-block w-100" alt="barbijo">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-dark">Barbijos de calidad.</h5>
+                
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
 
 
 
