saco mayus de titulo nav

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -29,19 +29,19 @@
     <div class="collapse navbar-collapse nav-div2" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-ul">
         <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/nosotros.html">NOSOTROS</a>
+          <a class="navbar-brand" href="../paginas/nosotros.html">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/productos.html">PRODUCTOS</a>
+          <a class="navbar-brand" href="../paginas/productos.html">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+          <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">Preguntas Frecuentes</a>
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+          <a class="navbar-brand" href="../paginas/precios.html">Precios</a>  
         </li>
         <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+          <a class="navbar-brand" href="../paginas/contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
