modifico colores de p carousel

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -59,6 +59,7 @@
               <img src="../imagenes/guanteslatex.png" class="d-block w-100" alt="latex">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark">Guantes de Latex</h5>
+                <p class="text-dark">Ofrecen una mayor facilidad en los gestos del trabajo </p>
                 
               </div>
             </div>
@@ -66,12 +67,14 @@
               <img src="../imagenes/guantesnegros.png" class="d-block w-100" alt="nitrilo">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-dark">Guantes de Nitrilo</h5>
+                <p class="text-muted" >Extremadamente elásticos. Perfecta protección frente a sustancias peligrosas.</p>
                  </div>
             </div>
             <div class="carousel-item">
               <img src="../imagenes/barbijo.jpg" class="d-block w-100" alt="barbijo">
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-dark">Barbijos de calidad.</h5>
+                <h5 class="text-dark">Barbijos KN95.</h5>
+                <p class="text-dark"> tienen un nivel de filtración superior al 95 %, lo cual los hace efectivos</p>
                 
               </div>
             </div>
