saco mayusculas del nav en index

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">Preguntas Frecuentes</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="../paginas/precios.html">PRECIOS</a>  
+              <a class="navbar-brand" href="../paginas/precios.html">Precios</a>  
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="../paginas/contacto.html">CONTACTO</a>
+              <a class="navbar-brand" href="../paginas/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
