--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="form-group">
-            <textarea placeholder="Your Message" class="form-control" name="Escriba su mensaje" rows="10" required></textarea>
+            <textarea placeholder="Escriba su mensaje" class="form-control" name="Escriba su mensaje" rows="10" required></textarea>
           </div>
           <button type="submit" class="btn btn-lg btn-success btn-block">Enviar</button>
         </form>
