agrego carrito a mi web

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="descripcion" content="contacto">
     <meta name="keywords" content="HTML, ASP, JS, META, insumos, guantes, cofias, guantes latex, guantes nitrilo, insumos medicos, insumos quirurgicos, barbijos">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0 minimun-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50obBUHEmvPQ+1lW4y7PTFmhCaxp0ML5d60;1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymius">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="icon" href="../Imagenes/ICO.jpeg">
-    <title>todo insumoss-contacto</title>
+    <title>contacto</title>
 </head>
 
 <body>
@@ -36,9 +36,6 @@
         </li>
         <li class="nav-item">
           <a class="navbar-brand" href="../paginas/preguntas-frecuentes.html">Preguntas Frecuentes</a>
-        </li>
-        <li class="nav-item">
-          <a class="navbar-brand" href="../paginas/precios.html">Precios</a>  
         </li>
         <li class="nav-item">
           <a class="navbar-brand" href="../paginas/contacto.html">Contacto</a>
@@ -78,6 +75,7 @@
           </ul>
        </div>     
   </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+        
+        <script src="/app.js"></script>
+      </body>
 </html>
