agrego boton finalizar

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -112,7 +112,9 @@
       </template>
       
         <div class="container">
-          <button class="btn btn-success"id="finalizar">FINALIZAR COMPRA</button>
+          <button class="btn btn-success"id="finalizar-compra">
+            FINALIZAR COMPRA
+          </button>
         
       </div>
 
